# arrow-zerobus-sdk-wrapper

./: .cargoignore  .envrc.local  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  PR_COMMENTS_REPLIES.md  README.md  README_TESTING.md  RELEASE_CHECKLIST.md  RELEASE_INSTRUCTIONS.md  RELEASE_SUMMARY.md  clippy.toml  coverage.xml  pyproject.toml  pytest.ini  rustfmt.toml
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml  coverage.yml  validate-release.yml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
benches/performance/: bench_latency.rs  bench_throughput.rs  bench_writer_disabled.rs
coverage/: COVERAGE_REPORT.md  COVERAGE_VERIFICATION.md  cobertura.xml  tarpaulin-report.html
docs/: PYO3_PYTEST_WORKAROUND.md  PYTHON_BINDINGS_COMPLETION.md  VERSION_MANAGEMENT.md
examples/: python_example.py  rust_example.rs
scripts/: check_coverage.sh  check_version.sh  create-pr.sh  fetch_pr_comments.py  install_pre_commit_hook.sh  run_tests.sh  sign-and-push.sh  sign-commit.sh  sign-commits.sh  sign-latest-commit.sh  test-python.sh  test.sh  validate_quickstart_python.sh  validate_quickstart_rust.sh
specs/001-zerobus-wrapper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-zerobus-wrapper/checklists/: requirements.md
specs/001-zerobus-wrapper/contracts/: python-api.md  rust-api.md
specs/002-otlp-sdk-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-otlp-sdk-update/checklists/: requirements.md
specs/002-otlp-sdk-update/contracts/: rust-api.md
specs/003-zerobus-writer-disabled/: TASK_COMPLETION.md  TASK_COMPLETION_FINAL.md  TASK_REVIEW.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-zerobus-writer-disabled/checklists/: requirements.md
specs/003-zerobus-writer-disabled/contracts/: python-api.md  rust-api.md
specs/004-per-row-errors/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-per-row-errors/checklists/: requirements.md
specs/004-per-row-errors/contracts/: python-api.md  rust-api.md
specs/005-debug-config-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-debug-config-fixes/checklists/: requirements.md
specs/005-debug-config-fixes/contracts/: python-api.md  rust-api.md
src/: error.rs  lib.rs
src/config/: loader.rs  mod.rs  types.rs
src/observability/: mod.rs  otlp.rs
src/python/: bindings.rs  mod.rs
src/utils/: file_rotation.rs  mod.rs
src/wrapper/: auth.rs  conversion.rs  debug.rs  mod.rs  protobuf_serialization.rs  retry.rs  zerobus.rs
tests/: test_auth.rs  test_config.rs  test_conversion.rs  test_error.rs  test_python_api_contract.rs  test_python_bindings.rs  test_retry.rs  test_rust_api.rs  test_rust_api_contract.rs  test_zerobus_integration.rs
tests/common/: mocks.rs  mod.rs
tests/contract/: mod.rs  test_per_row_errors_contract.rs  test_rust_api_contract.rs  test_transmission_result_contract.rs
tests/integration/: mod.rs  test_concurrent_access.rs  test_debug_files.rs  test_error_analysis.rs  test_failure_rate_backoff.rs  test_network_timeouts.rs  test_network_verification.rs  test_observability.rs  test_per_row_errors.rs  test_quarantine_workflow.rs  test_quickstart_validation.rs  test_rust_api.rs  test_sdk_reinitialization.rs  test_stream_closure_recovery.rs  test_stream_recreation.rs  test_wrapper_lifecycle.rs
tests/performance/: test_stress.rs
tests/python/: conftest.py  test_coverage.py  test_error_analysis.py  test_integration.py  test_integration_comprehensive.py  test_per_row_errors.py  test_quarantine_workflow.py
tests/unit/: mod.rs
tests/unit/config/: mod.rs  test_credentials.rs  test_loader.rs  test_types.rs
tests/unit/error/: mod.rs  test_error.rs
tests/unit/observability/: mod.rs  test_otlp.rs
tests/unit/python/: mod.rs  test_bindings.rs
tests/unit/utils/: mod.rs  test_file_rotation.rs
tests/unit/wrapper/: mod.rs  test_conversion_datatypes.rs  test_conversion_edge_cases.rs  test_conversion_nested.rs  test_conversion_result.rs  test_conversion_validation.rs  test_debug.rs  test_debug_concurrent.rs  test_debug_descriptor.rs  test_debug_rotation.rs  test_error_analysis.rs  test_failure_rate_backoff.rs  test_per_row_conversion.rs  test_per_row_edge_cases.rs  test_per_row_transmission.rs  test_protobuf_serialization.rs  test_quarantine_helpers.rs  test_retry.rs  test_transmission_result.rs  test_zerobus.rs  test_zerobus_limits.rs
